trying to fix missing image

--- a/case_study--visitor_registration_app.html
+++ b/case_study--visitor_registration_app.html
@@ -93,7 +93,7 @@
 					<h2 class="h2-heading">Usability testing</h2>
 
 					<p>I improvised in order to recruit subjects for my usability testing – I reached out to friends and acquaintances who joined a gym within the last year. I managed to find three people very quickly and tested the app prototype.</p>
-					<img class="image--medium image--with-caption" src="/resources/images/visitor_registration_user_testing.jpg">
+					<img class="image--medium image--with-caption" src="/resources/images/visitor_registration_user_testing.JPG">
 					<div class="image-caption">Usability testing with a friend</div>
 					<p>The key change made after the usability testing was to provide explanation as to why the phone number was needed – some people were uncomfortable with providing this information.</p>
 
