--- a/case_study--gymsales_settings_page.html
+++ b/case_study--gymsales_settings_page.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<!-- NAV -->
-		<nav class="nav nav--on-light-bg" id="nav">
+		<nav class="nav nav--on-light-bg noselect" id="nav">
 					<ul class="nav__list">
 						<li class="nav__item"><a href="index.html">Home</a></li>
 						<li class="nav__item"><a href="about_vedran.html">About me</a></li>
@@ -123,14 +123,21 @@
 		<script src="js/copy_email.js"></script>
 		<div id='footer'></div>
 		<div class="footer section--dark footer__content">
-			<div class="section__content ">
-					<a id="copy-email" onmouseover="mouseOver('copy-email')" onmouseout="mouseOut('copy-email','hello@vedran.io')" class ="link link--on-dark-bg link__footer email-bttn copy-email" data-clipboard-text="hello@vedran.io" href="#copy-email">hello@vedran.io</a>
+			<div class="section__content noselect">
+				<button id="email-bttn" type="button" name="button" class="bttn bttn--almost-black bttn--email">
+					<span class="bttn__label" id="email-label"
+								onmouseover="mouseOver('email-label')"
+								onmouseout="mouseOut('email-label','hello@vedran.io')"
+								data-clipboard-text="hello@vedran.io">
+						hello@vedran.io
+					</span>
+				</button>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://twitter.com/vedranio">Twitter</a>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://medium.com/@vedranio">Medium</a>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://www.linkedin.com/in/vedran-arnautovic-716a1b128">LinkedIn</a>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://github.com/vedranio">GitHub</a>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://www.instagram.com/vedran_arnautovic/">Instagram</a>
-					<script type="text/javascript">copyEmailToClipBoard('.copy-email','copy-email', "link link--on-dark-bg link__footer email-bttn copy-email","hello@vedran.io");</script>
+					<script type="text/javascript">copyEmailToClipBoard('.bttn__label','email-label', "bttn__label","hello@vedran.io");</script>
 			</div>
 		</div>
 		<!-- END FOOTER -->
