fixing top of page padding after I implemented position:fixed for the nav

--- a/case_study--credit_card_form_redesign.html
+++ b/case_study--credit_card_form_redesign.html
@@ -25,7 +25,7 @@
 
 		<!-- CASE STUDY INTRO -->
 		<div class="section section--medium">
-			<div class="section__content section--first-in-section section--last-in-section section__content--allow-wide">
+			<div class="section__content section--top-of-page section--last-in-section section__content--allow-wide">
 				<h1 class="h1-heading">Credit card payment form</h1>
 					<p><a class ="link link--on-light-bg link--inline" target="_blank" href="https://www.seek.com.au/">SEEK</a> is the largest online employment marketplace in Australia.</p>
 					<p>With most of SEEK’s revenue coming from job ad placements, it was critical to improve the existing online payment form.</p>
