--- a/case_study--design_sprint.html
+++ b/case_study--design_sprint.html
@@ -25,7 +25,7 @@
 
 		<!-- CASE STUDY INTRO -->
 		<div class="section section--medium">
-			<div class="section__content section--first-in-section section--last-in-section section__content--allow-wide">
+			<div class="section__content section--top-of-page section--last-in-section section__content--allow-wide">
 				<h1 class="h1-heading">Design sprint for JoraLocal</h1>
 					<p><a class ="link link--on-light-bg link--inline" target="_blank" href="https://www.seek.com.au/">SEEK</a> is the largest online employment marketplace in Australia.</p>
 					<p>Recognising that the competition in the hospitality and retail  job ad market was heating up, we decided to design and quickly validate our own product to compete directly in this space.</p>
