--- a/case_study--design_workshop_facilitation.html
+++ b/case_study--design_workshop_facilitation.html
@@ -25,7 +25,7 @@
 
 		<!-- CASE STUDY INTRO -->
 		<div class="section section--medium">
-			<div class="section__content section--first-in-section section--last-in-section section__content--allow-wide">
+			<div class="section__content section--top-of-page section--last-in-section section__content--allow-wide">
 				<h1 class="h1-heading">Workshop facilitation and wireframe design</h1>
 					<p><a class ="link link--on-light-bg link--inline" target="_blank" href="https://www.rubicon-world.com/">Rubicon</a> are a small software development company based in Sarajevo, who work with clients around the world. They wanted to try a different way of kicking off product development with their clients, and chose me as a design workshop facilitator.</p>
 			</div>
