--- a/case_study--usability_testing_with_kolektiv.html
+++ b/case_study--usability_testing_with_kolektiv.html
@@ -25,7 +25,7 @@
 
 		<!-- CASE STUDY INTRO -->
 		<div class="section section--medium">
-			<div class="section__content section--first-in-section section--last-in-section section__content--allow-wide">
+			<div class="section__content section--top-of-page section--last-in-section section__content--allow-wide">
 				<h1 class="h1-heading">Coaching an organisation in usability testing</h1>
 					<p><a class ="link link--on-light-bg link--inline" target="_blank" href="http://kolektiv.ba/">Kolektiv</a> are a regional leader in international recruitment, operating in the Balkans and central and eastern Europe. They offer a range of products and services including a job board, salary surveys and recruitment services.</p>
 			</div>
