--- a/case_study--visitor_registration_app.html
+++ b/case_study--visitor_registration_app.html
@@ -25,7 +25,7 @@
 
 		<!-- CASE STUDY INTRO -->
 		<div class="section section--medium">
-			<div class="section__content section--first-in-section section--last-in-section section__content--allow-wide">
+			<div class="section__content section--top-of-page section--last-in-section section__content--allow-wide">
 				<h1 class="h1-heading">Visitor registration app</h1>
 					<p><a class ="link link--on-light-bg link--inline" target="_blank" href="http://gymsales.net">GymSales</a> are a provider of lead and member management software for gyms and fitness centres. They wanted to extend their product set to include an iPad application for management of visitor registrations.</p>
 			</div>
