--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 	<script type="text/javascript">formatStickyNav("@colour-medium-gray");</script>
 
 	<!-- HEADER -->
-	<header class="header">
+	<header class="header section--top-of-page">
 			<div class="header__content">
 				<div class="header__image"></div>
 				<div class="intro">
