--- a/side_project--minty_ninja.html
+++ b/side_project--minty_ninja.html
@@ -25,7 +25,7 @@
 
 
 		<div class="section section--medium">
-			<div class="section__content section--first-in-section section--last-in-section section__content--allow-wide">
+			<div class="section__content section--top-of-page section--last-in-section section__content--allow-wide">
 				<h1 class="h1-heading">Minty Ninja website and service</h1>
 					<p>If this product had a personality, it would be a complete douchebag.</p>
 					<p>This is the only product I regret getting involved with, but I did, so here we are. The site is no longer live, but you can see an archived version of it below.</p>
@@ -60,6 +60,7 @@
 					<h2 class="h2-heading">Current status</h2>
 
 					<p>I decided to pull out of the team in 2016 having explained my rationale to them. Thankfully, they all understood and together we decided to pull the product down.</p>
+					<br>
 					<p><a class="link link--on-light-bg" href="/side_projects/minty.ninja/index.html">View an archived version of minty.ninja</a></p>
 			</div>
 			<div class="section section--medium section--nav">
