--- a/case_study--gymsales_settings_page.html
+++ b/case_study--gymsales_settings_page.html
@@ -25,7 +25,7 @@
 
 		<!-- CASE STUDY INTRO -->
 		<div class="section section--medium">
-			<div class="section__content section--first-in-section section--last-in-section section__content--allow-wide">
+			<div class="section__content section--top-of-page section--last-in-section section__content--allow-wide">
 				<h1 class="h1-heading">Design of a settings page</h1>
 					<p><a class ="link link--on-light-bg link--inline" target="_blank" href="http://gymsales.net">GymSales</a> are a provider of lead and member management software for gyms and fitness centres.</p>
 					<p>As their product grew in complexity, so did their settings page – it required some attention before it could grow further.</p>
