--- a/side_project--walnut.html
+++ b/side_project--walnut.html
@@ -25,7 +25,7 @@
 
 
 		<div class="section section--medium">
-			<div class="section__content section--first-in-section section--last-in-section section__content--allow-wide">
+			<div class="section__content section--top-of-page section--last-in-section section__content--allow-wide">
 				<h1 class="h1-heading">Walnut <span class="nobr">iOS app</span></h1>
 					<p>Walnut allows you to visualise an artwork on your wall, before you buy it.</p>
 					<p><a class="link link--on-light-bg" target="_blank" href="https://itunes.apple.com/au/app/walnut/id560843785?mt=8">View on the app store</a></p>
