--- a/vedrans_design_work.html
+++ b/vedrans_design_work.html
@@ -25,7 +25,7 @@
 
 		<!-- MY WORK INTRO -->
 		<div class="section section--light">
-			<div class="section__content section--first-in-section section--last-in-section section__content--allow-wide">
+			<div class="section__content section--top-of-page section--last-in-section section__content--allow-wide">
 				<h1 class="h1-heading">My work</h1>
 					<p>Design has more in common with science and engineering than art. Art is subjective, design is not. Therefore, it is important for designers to be able to articulate their decisions through a coherent design process.</p>
 					<p>Here is a selection of my work, focusing on my design and thought process, rather than just the finished products.</p>
