copying footer changes to all the pages

--- a/case_study--visitor_registration_app.html
+++ b/case_study--visitor_registration_app.html
@@ -127,14 +127,14 @@
 		<div id='footer'></div>
 		<div class="footer section--dark footer__content">
 			<div class="section__content noselect">
-				<button id="email-bttn" type="button" name="button" class="bttn bttn--almost-black bttn--email">
+				<div id="email-bttn" class="bttn bttn--almost-black bttn--email">
 					<span class="bttn__label" id="email-label"
 								onmouseover="mouseOver('email-label')"
 								onmouseout="mouseOut('email-label','hello@vedran.io')"
 								data-clipboard-text="hello@vedran.io">
 						hello@vedran.io
 					</span>
-				</button>
+				</div>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://twitter.com/vedranio">Twitter</a>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://medium.com/@vedranio">Medium</a>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://www.linkedin.com/in/vedran-arnautovic-716a1b128">LinkedIn</a>
