fixing browsehappy link

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					<div class="section__content section--first-in-section section--last-in-section">
 						<h2 class="h2-heading">Want a better browser?</h2>
 						<p>Chances are, you spend a good proportion of your life on the internet. Make the most of it – get a modern browser.</p>
-						<a class ="link link--on-light-bg" target="_blank "href="https://www.browsehappy.com">Learn about modern browsers</a>
+						<a class ="link link--on-light-bg" target="_blank "href="http://www.browsehappy.com/">Learn about modern browsers</a>
 					</div>
 				</div>
 			</div>
