--- a/index.html
+++ b/index.html
@@ -125,11 +125,19 @@
 			</div>
 		</div>
 		<!-- DESIGN COMMUNITY -->
-		<div class="section section--light section--last-in-section">
+		<div class="section section--light">
 			<div class="section__content">
 				<h2 class="h2-heading">Design community</h2>
 					<p class="paragraph__home">I am actively involved in local design meetups, have <a class ="link link--on-light-bg link--inline" target="_blank" href="http://www.meetup.com/Sarajevo-UX-Design/">founded one myself</a> and love sharing ideas and learning about other designers’ processes.</p>
 				<a class ="link link--on-light-bg" href="http://www.slideshare.net/vedranio/presentations" target="_blank">Browse my presentations</a>
+			</div>
+		</div>
+		<!-- MY RESUME -->
+		<div class="section section--light section--last-in-section">
+			<div class="section__content">
+				<h2 class="h2-heading">My resumé</h2>
+					<p class="paragraph__home">This site contains examples of my work, showing how I approach design. If you're after a more traditional resume, you can access it below.</p>
+				<a class ="link link--on-light-bg" href="http://www.vedran.io/resources/documents/Vedran-Arnautovic–Resume-2017.pdf" target="_blank">View Vedran's resumé</a>
 			</div>
 		</div>
 
