fixed resume typo

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 		<div class="section section--light section--last-in-section">
 			<div class="section__content">
 				<h2 class="h2-heading">My resumé</h2>
-					<p class="paragraph__home">This site contains examples of my work, showing how I approach design. If you're after a more traditional resume, you can access it below.</p>
+					<p class="paragraph__home">This site contains examples of my work, showing how I approach design. If you're after a more traditional resumé, you can access it below.</p>
 				<a class ="link link--on-light-bg" href="http://www.vedran.io/resources/documents/Vedran-Arnautovic–Resume-2017.pdf" target="_blank">View Vedran's resumé</a>
 			</div>
 		</div>
