vision case study

--- a/case_study--design_sprint.html
+++ b/case_study--design_sprint.html
@@ -36,7 +36,7 @@
 			<div class="sub-section__content sub-section--first-in-section">
 					<h2 class="h2-heading">The process</h2>
 
-					<p>I've previously written extensively about our design sprint process, so if you want to see more details including some tips on how to run a design sprint, check out <a class ="link link--on-light-bg link--inline" target="_blank" href="https://medium.com/seek-user-experience/using-design-sprint-to-accelerate-innovation-part-i-of-ii-f643ad42cf60#.8f4gtb119">my post on Medim</a>.</p>
+					<p>I've previously written extensively about our design sprint process, so if you want to see more details including some tips on how to run a design sprint, check out <a class ="link link--on-light-bg link--inline" target="_blank" href="https://medium.com/seek-user-experience/using-design-sprint-to-accelerate-innovation-part-i-of-ii-f643ad42cf60#.8f4gtb119">my post on Medium</a>.</p>
 					<p>Our process heavily borrowed from Google’s design sprint process, but we did make some key modifications, which I cover in the article above. So here is Our process in a nutshell.</p>
 
 					<h3 class="h3-heading">Day 1 – Unpack and immerse</h3>
@@ -103,7 +103,7 @@
 			<div class="section section--medium section--nav">
 				<div class="sub-section__content sub-section--last-in-section">
 					<a class="link link--on-light-bg link--case-study-nav" href="vedrans_design_work.html#DesignSprintForJoraLocal">Back to ‘My work’</a>
-					<a class="link link--on-light-bg link--inline" href="case_study--design_workshop_facilitation.html">Next case study</a>
+					<a class="link link--on-light-bg link--inline" href="case_study--hirer_vision.html">Next case study</a>
 				</div>
 			</div>
 		</div>
