--- a/vedrans_design_work.html
+++ b/vedrans_design_work.html
@@ -71,6 +71,24 @@
 			</div>
 		</div>
 
+		<!-- HIRER VISION -->
+		<div id="HirerVision" class="section section--medium section--on-top">
+
+			<div class="my-work-item my-work-item--with-side-image">
+
+				<h2 class="h2-heading h2-heading__with-side-image--vertically-stacked">Cocreating a <nobr>product vision</nobr></h2>
+
+				<img class="my-work-item__image" src="resources/images/vision_creating_journey_map_2.jpg" alt="People creating a journey map with sticky notes"/>
+
+				<div class="my-work-item__description--side-image">
+					<h2 class="h2-heading h2-heading__with-side-image--side-by-side">Cocreating a <nobr>product vision</nobr></h2>
+					<p>I ran a cross-product project to help SEEK create and communicate a vision for their hirer product portfolio.</p>
+					<p>The output inspired and aligned multiple teams in working towards a common vision.</p>
+					<p><a class ="link link--on-light-bg" href="case_study--hirer_vision.html">Read case study</a></p>
+				</div>
+			</div>
+		</div>
+
 		<!-- RUBICON WORKSHOP -->
 		<div class="section">
 
