lazy image loading for my work page

--- a/vedrans_design_work.html
+++ b/vedrans_design_work.html
@@ -73,8 +73,6 @@
 					<p><a class ="link link--on-light-bg" href="case_study--design_sprint.html">Read case study</a></p>
 					</div>
 
-					<!-- <img class="my-work-item__image--browser-centred" src="resources/images/browser_with_joralocal_page.png" alt="Credit card payment form shown in browser"/> -->
-
 					<div id="sprint-img-container" class="my-work-item__image--browser-centred placeholder" data-large="resources/images/browser_with_joralocal_page.png">
 						<img id="sprint-img-placeholder" class="img-small" src="resources/images/browser_with_joralocal_page_PLACEHOLDER.png">
 						<div style="padding-bottom: 61.2%;"></div>
@@ -131,7 +129,11 @@
 					<p><a class ="link link--on-light-bg" href="case_study--credit_card_form_redesign.html">Read case study</a></p>
 					</div>
 
-					<img class="my-work-item__image--browser-centred" src="resources/images/browser_with_card_form.png" alt="Credit card payment form shown in browser"/>
+					<div id="creditcard-img-container" class="my-work-item__image--browser-centred placeholder" data-large="resources/images/browser_with_card_form.png">
+						<img id="creditcard-img-placeholder" class="img-small" src="resources/images/browser_with_card_form_PLACEHOLDER.png" alt="Credit card payment form shown in browser">
+						<div style="padding-bottom: 64.55%;"></div>
+					</div>
+					<script type="text/javascript">lazyLoadImage('creditcard-img-container','creditcard-img-placeholder','my-work-item__image--browser-centred-shadow');</script>
 
 			</div>
 		</div>
@@ -160,7 +162,11 @@
 					<p><a class ="link link--on-light-bg" href="case_study--gymsales_settings_page.html">Read case study</a></p>
 					</div>
 
-					<img class="my-work-item__image--browser-centred" src="resources/images/browser_with_settings_page.png" alt="Settings page shown within a browser window"/>
+					<div id="settings-page-img-container" class="my-work-item__image--browser-centred placeholder" data-large="resources/images/browser_with_settings_page.png">
+						<img id="settings-page-img-placeholder" class="img-small" src="resources/images/browser_with_settings_page_PLACEHOLDER.png" alt="Settings page shown within a browser window">
+						<div style="padding-bottom: 64.45%;"></div>
+					</div>
+					<script type="text/javascript">lazyLoadImage('settings-page-img-container','settings-page-img-placeholder','my-work-item__image--browser-centred-shadow');</script>
 
 			</div>
 		</div>
@@ -178,25 +184,42 @@
 					<div class="my-work-item--side-projects-container">
 						<div class="my-work-item__side-project">
 							<a href="side_project--walnut.html">
-								<img class="my-work-item__image--side-project-link" src="resources/images/side_project_logo_walnut.png" alt="Walnut Art App logo – view side project details"/>
+								<div id="walnut-img-container" class="my-work-item__image--side-project-link placeholder" data-large="resources/images/side_project_logo_walnut.png">
+									<img id="walnut-img-placeholder" class="img-small" src="resources/images/side_project_logo_walnut_PLACEHOLDER.png" alt="Walnut Art App logo – view side project details">
+									<div style="padding-bottom: 100%;"></div>
+								</div>
+								<script type="text/javascript">lazyLoadImage('walnut-img-container','walnut-img-placeholder');</script>
+
 								<span class="side-project-name"><span>Walnut Art iOS App</span></span>
 							</a>
 						</div>
 						<div class="my-work-item__side-project">
 							<a target="_blank" href="http://react-autosuggest.js.org/">
-								<img class="my-work-item__image--side-project-link" src="resources/images/side_project_logo_react_auto-suggest.png" alt="React Autosuggest logo – go to side project site"/>
+								<div id="react-img-container" class="my-work-item__image--side-project-link placeholder" data-large="resources/images/side_project_logo_react_auto-suggest.png">
+									<img id="react-img-placeholder" class="img-small" src="resources/images/side_project_logo_react_auto-suggest_PLACEHOLDER.png" alt="React Autosuggest logo – go to side project site">
+									<div style="padding-bottom: 100%;"></div>
+								</div>
+								<script type="text/javascript">lazyLoadImage('react-img-container','react-img-placeholder');</script>
 								<span class="side-project-name"><span>react-autosuggest.js.org</span></span>
 							</a>
 						</div>
 						<div class="my-work-item__side-project">
 							<a target="_blank" href="http://accessible-colors.com/">
-								<img class="my-work-item__image--side-project-link" src="resources/images/side_project_logo_accessible_colors.png" alt="Accessible Colours logo – go to project site"/>
+								<div id="ac-img-container" class="my-work-item__image--side-project-link placeholder" data-large="resources/images/side_project_logo_accessible_colors.png">
+									<img id="ac-img-placeholder" class="img-small" src="resources/images/side_project_logo_accessible_colors_PLACEHOLDER.png" alt="Accessible Colours logo – go to project site">
+									<div style="padding-bottom: 100%;"></div>
+								</div>
+								<script type="text/javascript">lazyLoadImage('ac-img-container','ac-img-placeholder');</script>
 								<span class="side-project-name"><span>accessible-colors.com</span></span>
 							</a>
 						</div>
 						<div class="my-work-item__side-project">
 							<a href="side_project--minty_ninja.html">
-								<img class="my-work-item__image--side-project-link" src="resources/images/side_project_logo_minty_ninja.png" alt="Minty Ninja logo – view side project details"/>
+								<div id="ninja-img-container" class="my-work-item__image--side-project-link placeholder" data-large="resources/images/side_project_logo_minty_ninja.png">
+									<img id="ninja-img-placeholder" class="img-small" src="resources/images/side_project_logo_minty_ninja_PLACEHOLDER.png" alt="Minty Ninja logo – view side project details">
+									<div style="padding-bottom: 100%;"></div>
+								</div>
+								<script type="text/javascript">lazyLoadImage('ninja-img-container','ninja-img-placeholder');</script>
 								<span class="side-project-name"><span>Minty Ninja<br>(archived)</span></span>
 							</a>
 						</div>
