fixed minty ninja hover state

--- a/vedrans_design_work.html
+++ b/vedrans_design_work.html
@@ -220,7 +220,7 @@
 									<div style="padding-bottom: 100%;"></div>
 								</div>
 								<script type="text/javascript">lazyLoadImage('ninja-img-container','ninja-img-placeholder');</script>
-								<span class="side-project-name"><span>Minty Ninja<br>(archived)</span></span>
+								<span class="side-project-name"><span>Minty Ninja (archived)</span></span>
 							</a>
 						</div>
 					</div>
